# poe2

./: Cargo.toml
.github/workflows/: check.yml  release.yml
benches/: bench.rs
bundle/: Cargo.toml
bundle/src/: index.rs  lib.rs  util.rs
dat/: Cargo.toml
dat/src/: lib.rs
metadata/: Cargo.toml
metadata/resources/: aosetparent.ao  aosetparent.aoc  astparent.aoc  character.act  character.ao  character.aoc  character.ot  character.otc  equipment.it  equipment.itc  fmtparent.ao  fmtparent.aoc  grabbablebyinteraction.ot  grabbablebyinteraction.otc  gravestoneamuletheld.ao  gravestoneamuletheld.aoc  item.it  item.itc  light.ao  light.aoc  parent.ao  skin.ao  skin.aoc  strdexfour.act
metadata/src/: ao.rs  core.rs  lib.rs  parser.rs  util.rs  visitor.rs
metadata/src/core/: tokens.rs
src/: cli.rs  main.rs
