[package]
name = "poe2kit"
version = "0.1.0"
edition = "2021"

[dependencies]
bundle = { workspace = true }
bytemuck = { workspace = true }
murmurhash64 = { workspace = true }
oodle-safe = { workspace = true }
oodle-sys = { workspace = true }
rayon = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
cliclack = { workspace = true }
human-repr = { workspace = true }
fancy-duration = { workspace = true }
globset = { workspace = true }


[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bench"
harness = false

[workspace]
members = ["bundle", "metadata"]

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
bundle = { path = "bundle", features = ["tracing"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
bytemuck = "1.21.0"
murmurhash64 = "0.3.1"
oodle-safe = { version = "0.2.0", features = ["bindgen"] }
oodle-sys = { version = "0.2.0", features = ["bindgen"] }
rayon = "1.10.0"
tracing = { version = "0.1.41", features = ["attributes"] }
globset = "0.4.15"
tracing-subscriber = { version = "0.3.19", features = ["time"] }
dashmap = { version = "6.1.0", features = ["rayon"] }
nom = "7.1.3"
encoding_rs = { version = "0.8.35" }
clap = { version = "4.5.24", features = ["derive"] }
cliclack = "0.3.5"
human-repr = "1.1.0"
fancy-duration = "0.9.2"
indexmap = "2.7.0"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
nom-span = "0.1.2"
